make sure trajectories are not covered by btns

--- a/resources/tofu.css
+++ b/resources/tofu.css
@@ -77,6 +77,7 @@ body {
     left: 50%;
     margin-top: calc( -25px / 0.6);
     margin-left: calc( -25px / 0.6);
+    z-index: 1;
 }
 
 button {
